Setting overflow to visible on project modal articles to try and solve ie bug

--- a/web/app/themes/scb/assets/styles/pages/_single-project.scss
+++ b/web/app/themes/scb/assets/styles/pages/_single-project.scss
@@ -155,6 +155,10 @@ body.single-project {
     }
   }
 
+  article {
+    overflow: visible;
+  }
+
   @include min-screen($breakpoint-medium) {
 
     &.active {
